[package]
name = "rumi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "rumi"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.8.0"
actix-web-static-files = "4.0.1"
clap = { version = "4.5.9", features = ["derive"] }
static-files = "0.2.4"


[build-dependencies]
static-files = "0.2.1"

[[bin]]
name = "rumi"
path = "src/main.rs"
